@@ -8,6 +8,7 @@ AUX xbmc-9999-no-arm-flags.patch 542 SHA256 72164a8b91f3209cff06ea1a103580f82713
 AUX xbmc-9999-nomythtv.patch 6190 SHA256 ffb1eb49f94b4ae41e5d79172499671915122a58af248b0585ee276e4aa2c87e SHA512 4a9ff4b4f5cb56c92932f05b5b812bee0fdce37ed9f568a6e0dc0cd62335e2131361a63d8026b64f9c7078fa9c4ef0e439b52234c722b1b854aeeed1cc2764c7 WHIRLPOOL ce457b509c6fd222ae6002420db7cc438e1352114f38790b623f04e6834eb5508d4609a1bf71628bfafde3bcef830e84b42448619c19227d5729d6d8a824a13c
 AUX xbmc-database-restrict-index-size.diff 2882 SHA256 40748a1ec1de42190a29b96feacfe23111ca1ca3d08877f7c802e5076ee06d62 SHA512 49b84ca79627e4b00993d9fe8d52583b068628d98991e04db4645caf3586be60d9edb2b9483bfb3fe6967720621accc7c1505986a9c5ab7a7f45d7ecc7438cd9 WHIRLPOOL c38bdddd88743a33dc338bc19741379b877da821790aff930e42af3a89e4308ab8b16af96fd924315817512a14cd2892c52cf23f502b96e315a49482f6fffea1
 AUX xbmc-fix-mysql-memoryleak.diff 2135 SHA256 b521486409283f5d284a7442606e44c125db457a6490e8e884087d7106615c09 SHA512 7ee7785663c01bac004f8e524dd76896e11f0dda639f4160918b360997329f9b5719df4def9c5d4a22ff07582fea6471da8a8aa942be1db5bf3638d28f5f8e77 WHIRLPOOL f27798f36e9718a1ffd5f66d234ed493c736d302d10f6e844117253f7864d7acadae6b5893bfe898bff17c350c2a33fe17f5eae09f94d3d6d3980ca27ff9bd20
-EBUILD xbmc-9999-r1.ebuild 6214 SHA256 140d0d8532c25c81424c62d932e998cf09a7c6ba07ce19c7533ff46a33e55e33 SHA512 d209afc030865f20180ac6d2b0403c22adae4c742f5d11fa0a18b38eb18fee4cd5e02ce0da69c719f4fa0b820e331b8587bd40102911993fd8eda29ff07c21be WHIRLPOOL 521d4982c390c71cc8998bc15b2cae1916eaba11f652bbb643a44a1b726850b78738b2f0de10665dcd3180ef1e96d95ec84436e14818f3d424c7fe76934bf989
-MISC ChangeLog 451 SHA256 e4e3e36a98bdee035b5d03e9de4334efae0714fc20e9813596f7d24beac8074a SHA512 2b97d9c2323c97c661e73cf3f6e1b66adcf941edf376e8f30a634b67a01af065821661bd5d0cbeefe72a6ca627ff59e9f3c0b7f0144bf0e2fe50a7272fe05d51 WHIRLPOOL 46856e022bb019e6623be384b6ba8e8990e24b34a3fc4eb16361a2e4649cdd679c76934423fd79b690cda16f6a53b842169722ed7b123a0cb694eb6a6dd8058e
+DIST xbmc-9999-20121224-generated-addons.tar.xz 51980 SHA256 21284fe7ccee065eee10064f73a469722d6ffddf2fe882a0aefc07ea0eba0401 SHA512 48cdf8c685a48cd32462509962c888e8bc16254268d6fc891aacc5222da42e227ee5b6858c9e2b80d7d9fecc63862cd0c62c181a106212886a25f9be52778a1f WHIRLPOOL 12a31d33cc322b4afc3bdc829fc330a0971cab8a557a2f87885569d817a3664ae7506bfe7984322ec95b7786a246cd5edb10fceabfd96965ef33dd19cb934ae7
+EBUILD xbmc-9999-r1.ebuild 6718 SHA256 155bfc9dd9246aa4fedc40123ddd71fe56e58e934f789f6eafcc0bd0be5570e4 SHA512 4cb6e0c66a545aa8f61a2c0115ccee2a0ea8b2e268d2b07150944901374b39058fed37361427de4e87591dac6bbfaab7ad3b0e7086cc811c044679ad3aab2245 WHIRLPOOL 3e654721232bb59afceba25e8c530c39b9b117bbccc0ba800ad7260f73f25163d54eb536f6c31a2e219470be15b66fd5346d534a017b9e27ddc0b27d5aa6d709
+MISC ChangeLog 570 SHA256 0c1edd9eaea3572c26dd0eaaa85b80a4ec9380d40db35f61b9e218ebadce3638 SHA512 8bc9f666835f24fde40ab3495883bd49e2e682c685b18a854103af5e4fc75344445a22074e211582584b4b5f86c50a2a5de81db5e8aab5d64c053f5ddb808054 WHIRLPOOL 3a06224c9535649022858bd566f854d21b7cef1914ee3a33f762d8c948b573d093a0edcf96e298785224411de56c40031755f994661eade916a009f780d77fc5
 MISC metadata.xml 1107 SHA256 c8a043337ff8a7015d7ddd934cc150225ade4e8bf4dae9f018ddd4287a75696f SHA512 5f7b69143ffa683a1b8e474f78c7108bacf1fe3874b938461ab7e334d3ce6533040387a49311bfa52d33887bdbcf687a82ec3e37fe4b403424b804274b993313 WHIRLPOOL fa7ea46ce89d70f792f28ea487d515263d1289f57e818d1d6254f4fdf77f6db12d4bd404ea66248c2403b146439a62d7ff64184783beb106ae3c008694664e49
