@@ -1,8 +1,11 @@
 # ChangeLog for media-tv/xbmc
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-tv/xbmc/ChangeLog,v 1.26 2009/09/05 15:05:52 vapier Exp $
 
-  27 Nov 2009; Stijn Tintel <stijn@linux-ipv6.be> xbmc-9999-r1.ebuild:
+  30 Dec 2012; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
+  Merge upstream ebuild changes.
+
+  27 Nov 2009; Stijn Tintel <stijn+gentoo@linux-ipv6.be> xbmc-9999-r1.ebuild:
   Based on xbmc-9999 from portage, with some modifications:
   * Currently builds from the pvr-testing branch
   * Also export SVN_REVISION as exported
